--- a/contacts_app/pubspec.yaml
+++ b/contacts_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   url_launcher: ^6.3.1
   flutter_slidable: ^4.0.0
   quickalert: ^1.1.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
